force-app/main/default/objects/Project__c/fields/Bill_by__c.field-meta.xml
<CustomField>
    <fullName>Bill_by__c</fullName>
    <label>Bill by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Bill_By_Methods</valueSetName>
    </valueSet>
</CustomField>