force-app/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>The budget in hours for the project when budgeting by time.</description>
    <label>Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>