force-app/main/default/objects/Project__c/fields/Budget_By__c.field-meta.xml
<CustomField>
    <fullName>Budget_By__c</fullName>
    <description>The method by which the project is budgeted.</description>
    <label>Budget By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Budget_By_Methods</valueSetName>
    </valueSet>
</CustomField>