force-app/main/default/objects/Project__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Project Code</description>
    <label>Project Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>