force-app/main/default/objects/Project__c/fields/Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>Cost_Budget__c</fullName>
    <description>The monetary budget for the project when budgeting by money.</description>
    <label>Cost Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>