force-app/main/default/objects/Project__c/fields/Cost_Budget_includes_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Cost_Budget_includes_Expenses__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Option for budget of Total Project Fees projects to include tracked expenses.</description>
    <label>Cost Budget includes Expenses</label>
    <type>Checkbox</type>
</CustomField>