force-app/main/default/objects/Project__c/fields/Ends_on__c.field-meta.xml
<CustomField>
    <fullName>Ends_on__c</fullName>
    <description>Date the project will end</description>
    <inlineHelpText>Date the project will end</inlineHelpText>
    <label>Ends on</label>
    <type>Date</type>
</CustomField>