force-app/main/default/objects/Project__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <description>The amount you plan to invoice for the project. Only used by fixed-fee projects.</description>
    <label>Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>