force-app/main/default/objects/Project__c/fields/Harvest_ID__c.field-meta.xml
<CustomField>
    <fullName>Harvest_ID__c</fullName>
    <description>External ID for Harvest.

Listed as Integer value by Harvest API v2</description>
    <label>Harvest ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>