force-app/main/default/objects/Project__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the project is active or archived.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>