force-app/main/default/objects/Project__c/fields/Is_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the project is a fixed-fee project or not.</description>
    <label>Fixed Fee</label>
    <type>Checkbox</type>
</CustomField>