force-app/main/default/objects/Project__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Project notes</description>
    <inlineHelpText>Project notes</inlineHelpText>
    <label>Project Notes</label>
    <type>TextArea</type>
</CustomField>