force-app/main/default/objects/Project__c/fields/Notify_when_over_Budget__c.field-meta.xml
<CustomField>
    <fullName>Notify_when_over_Budget__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether project managers should be notified when the project goes over budget.</description>
    <label>Notify when over Budget</label>
    <type>Checkbox</type>
</CustomField>