force-app/main/default/objects/Project__c/fields/Over_Budget_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Over_Budget_Notification_Date__c</fullName>
    <description>Date of last over budget notification. If none have been sent, this will be null.</description>
    <label>Over Budget Notification Date</label>
    <type>Date</type>
</CustomField>