force-app/main/default/objects/Project__c/fields/Over_Budget_Notification_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Over_Budget_Notification_Percentage__c</fullName>
    <description>Whether project managers should be notified when the project goes over budget.</description>
    <label>Over Budget Notification Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>