force-app/main/default/objects/Project__c/fields/Project_Budget_By_Methods__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_By_Methods__c</fullName>
    <description>The method by which the project is budgeted.</description>
    <label>Project Budget By Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Budget_By_Methods</valueSetName>
    </valueSet>
</CustomField>