force-app/main/default/objects/Project__c/fields/Starts_on__c.field-meta.xml
<CustomField>
    <fullName>Starts_on__c</fullName>
    <description>The date the project was created</description>
    <inlineHelpText>The date the project was created</inlineHelpText>
    <label>Starts on</label>
    <type>Date</type>
</CustomField>